# realestate-rag

./: README.md
backend/: .gitignore  config.py  main.py  pyproject.toml
backend/db/: models.py
backend/middleware/: authMiddleware.py
backend/migrations/models/: 0_20251008145918_init.py  1_20251008194421_update.py  2_20251012171702_update.py  3_20251012183854_update.py
backend/routes/: app.py  auth.py
backend/utils/: clients.py  extract.py  serializers.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/signin/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/api/chat/: route.ts
frontend/app/chat/: page.tsx  types.ts
frontend/app/chat/components/: MessageList.tsx  MobileTopBar.tsx  NewChatDialog.tsx  Sidebar.tsx  TextInput.tsx
frontend/components/ui/: demo.tsx  shape-background.tsx  shape-landing-hero.tsx
